sf-ai-orchestrator/force-app/main/default/objects/AI_Step_Execution__c/AI_Step_Execution__c.object-meta.xml
<CustomObject>
    <description>Granular audit record for each AI Step within an execution. Stores inputs/outputs. Sensitive data is encrypted.</description>
    <label>AI Step Execution</label>
    <nameField>
        <displayFormat>STEP-{0000000}</displayFormat>
        <label>Step Execution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Step Executions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>