sf-ai-orchestrator/force-app/main/default/objects/AI_Step_Execution__c/fields/AI_Execution__c.field-meta.xml
<CustomField>
    <fullName>AI_Execution__c</fullName>
    <label>AI Execution</label>
    <referenceTo>AI_Execution__c</referenceTo>
    <relationshipLabel>Step Executions</relationshipLabel>
    <relationshipName>AI_Step_Executions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>