sf-ai-orchestrator/force-app/main/default/objects/AI_Step_Execution__c/fields/AI_Step__c.field-meta.xml
<CustomField>
    <fullName>AI_Step__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>AI Step</label>
    <referenceTo>AI_Step__c</referenceTo>
    <relationshipLabel>AI Step Executions</relationshipLabel>
    <relationshipName>AI_Step_Executions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>