sf-ai-orchestrator/force-app/main/default/objects/AI_Step_Execution__c/fields/Completion_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Completion_Tokens__c</fullName>
    <label>Completion Tokens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>