sf-ai-orchestrator/force-app/main/default/objects/AI_Step_Execution__c/fields/HTTP_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Status_Code__c</fullName>
    <label>HTTP Status Code</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>