sf-ai-orchestrator/force-app/main/default/objects/AI_Step_Execution__c/fields/Parsed_Output__c.field-meta.xml
<CustomField>
    <fullName>Parsed_Output__c</fullName>
    <label>Parsed Output</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>