sf-ai-orchestrator/force-app/main/default/objects/AI_Step_Execution__c/fields/Prompt_Sent__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Sent__c</fullName>
    <description>The resolved prompt after variable interpolation. Consider enabling Shield Encryption on this field.</description>
    <label>Prompt Sent</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>