sf-ai-orchestrator/force-app/main/default/objects/AI_Step_Execution__c/fields/Provider_Used__c.field-meta.xml
<CustomField>
    <fullName>Provider_Used__c</fullName>
    <label>Provider Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>