sf-ai-orchestrator/force-app/main/default/objects/AI_Step_Execution__c/fields/Raw_Response__c.field-meta.xml
<CustomField>
    <fullName>Raw_Response__c</fullName>
    <description>Full raw response from the AI provider. Consider enabling Shield Encryption.</description>
    <label>Raw Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>