sf-ai-orchestrator/force-app/main/default/objects/AI_Step_Execution__c/fields/Retry_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Retry_Attempt__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Retry Attempt</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>